atualizando para atualizar versão mais recente

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
-GITHUB_CLIENT_ID=bohac73
-GITHUB_CLIENT_SECRET=@Chile200
+services:
+  app:
+    environment:
+        GITHUB_CLIENT_ID=bohac73
+        GITHUB_CLIENT_SECRET=@Chile200
+
+spring.security.oauth2.client.registration.github.client-id=bohac73
+spring.security.oauth2.client.registration.github.client-secret=@chile200
+spring.security.oauth2.client.registration.github.scope=read:user,user:email
